2004-07-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/sock.c, src/munged/timer.c:
	  Set pthread stacksize to 256KB (to appease ia64).

2004-06-15  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c, src/munged/munged.c:
	  Moved auth_recv_init(), replay_init(), replay_fini(),
	  gids_create(), and gids_destroy() from create_conf() to main().

2004-06-11  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/sock.c, src/munged/timer.c: Set pthread stacksize to 64KB.

2004-06-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.h: Added support for C++.

2004-05-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c, src/munged/replay.c, src/munged/replay.h:
	  Fixed bug where decoded cred was marked as "played" even if the
	  rsp msg was not successfully delivered to the client {gnats:437}.

2004-05-13  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with automake-1.8.5.

2004-05-13  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/auth_policy.h, src/libmunge/auth_send.c,
	  src/libmunge/auth_send.h, src/libmunge/decode.c,
	  src/libmunge/encode.c, src/munged/auth_recv.c,
	  src/munged/auth_recv.h: Added AUTH_PIPE_NAME_PREFIX.
	  Changed return types of auth_send() and auth_recv().
	  Changed reporting of auth_send() and auth_recv() errors.

2004-05-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c, src/munged/munged.c: Moved auth_recv_init()
	  before gids_create() to allow for quicker exit when !root on aix.

	* src/munged/gids.c(gids_create): Allow errno == ENOENT to denote
	  success after last entry is returned by getgrent() for glibc-2.2.5.

2004-05-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/libcommon/munge_msg.c,
	  src/libcommon/munge_msg.h, src/libmunge/decode.c,
	  src/libmunge/encode.c, src/munged/cred.h, src/munged/dec_v1.c,
	  src/munged/enc_v1.c, src/munged/msg_server.c:
	  Incremented MUNGE_MSG_VERSION.  Fixed segfault occurring when